--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -565,3 +565,36 @@ ShiftLunchBreakPrev=Shift Lunch Break Previous
 headerValueMessage=Please Enter Valid Value For OSCE
 startEndTimeMessage=please enter start time less then end time
 generateClickTimeMessage=Please enter  value for specialisation and roletopic
+
+#Module 5 Bug issue constants
+postTypeWarning=Please Select Post Type
+specializationWarning=Select Specialization
+osceStatusWarning=Osce Status Not Changed to New
+timeFormatWarning=Please Enter valid formatted Time Valid format is HH:MM
+hourFormatWarning=Please Enter Valid Hour (Allowed Till 24)
+minuteFormatWarning=Please Enter Valid Minutes (Allowed Till 59)
+dataWarning=Data past date
+startTimeWarning=Start Time must not Empty
+endDateWarning=EndDate Must Not Empty
+dataEmptyWarning=Data must not empty
+dataPastDateWarning=Data must not be past date
+splittingWarning=No further Splitting is allowed
+splittingNotAllowWarning=Spliting is not allowed (Day End Time must greater than 13)
+osceDayWarning=No Osce Day for this Osce defined
+scheduleWarning=Schedule Not Generated and Osce Status Not Changed to Generated
+osceScaffoldWarning=Osce Scaffold Not Generated and Osce Status Not Changed to Generated
+osceStatusGeneratedWarning=Osce Status Not Changed to Generated
+osceStatusFixedWarning=Osce Status Not Changed to Fixed
+osceStatusClosedWarning=Osce Status Not Changed to Closed
+assignmentWarning=Assignment Not Generated for Osce and Osce Status Not Changed to Close
+sequenceWarning=Please Select atleast one Sequence
+rotationWarning=Rotation not assign to Next Day Sequence
+rotationSuccess=Rotation Successfully Assign to Next Sequence
+newDayRotationSuccess=New Day Created and Rotation assign to Sequence Successfully
+schedulePostponeWarning=Schedule is not Postpone
+prviousDayWarning=No Previous Day
+rotationPrevioustWarning=Rotation is not Assign to Previous Sequence
+rotationPreviousSuccess=Rotation is Assign to Previous Sequence Successfully
+schedulePrepondWarning=Schedule is not Prepond
+roomAssignedWarning=Room already assigned to another post
+pleaseEnterWarning=Please enter
