Updated i18n of studentsviewimpl

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -327,6 +327,7 @@ osceWarningPast = Datum darf nicht in der Vergangenheit liegen.
 osceWarningFuture = Datum zu weit in der Zukunft. Sollte nicht weiter als 2 Jahre weg sein.
 
 #Circuit details view
+close = Schliessen
 osceSimpatsInShortBreak = SimPats in Kurzpause*
 generate = Generieren*
 clearAll = Alle l\u00F6schen*
@@ -344,6 +345,10 @@ circuitLunchBreakStart = Beginn Mittagspause*
 circuitStation = Post
 select = Ausw\u00E4hlen*
 circuitUnnamedSequence = Unbenannte Sequenz*
+
+shiftLunchBreakNext=Mittag fr\u00FCher
+ShiftLunchBreakPrev=Mittag sp\u00E4ter
+
 warningPostType = Bitte Postenart ausw\u00E4hlen!*
 warningStatusNotChanged = Status von OSCE nicht auf "neu" geändert!*
 warningTimeFormat = Bitte Zeit im Format hh:mm eingeben!*
@@ -380,6 +385,9 @@ warningGenerate=Bitte Werte f\u00FCr Disziplin und Feld eingeben!
 
 #Sequence Sub View
 splitSequence = Reihenfolge Trennen
+
+#StudentsSubDetailsView
+importStudents = Studenten importieren
 
 #SPEc Assignment C
 keywords = Keywords*
@@ -422,7 +430,6 @@ accepted = Accepted
 assignTo = Assign To
 enterPatient = Please enter Patient name ...
 patientInformation = Patient in Semester's Information
-close = close
 patientAlreadyAssigned = Patient is already assigned.
 pleaseSelectRole = Please Select Role
 patientIsNotAccepted = Patient is not accepted.
@@ -432,10 +439,6 @@ updateOsce=OSCE Daten erfolgreich aktualisiert*
 deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?*
 saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.*
 osceDaySuccess=OSCE Tag erfolgreich aktualisiert.*
-
-#MODULE 6 START
-importstudent = Students import
-#MODULE 6 END
 
 # Issue : 120
 fileDetail = Files
@@ -593,9 +596,6 @@ checklistTopicNotNull=CheckList Topic Cannot be null
 
 headerValueMessage=Please Enter Valid Value For OSCE
 startEndTimeMessage=please enter start time less ten end time
-
-shiftLunchBreakNext=Shift Lunch Break Next
-ShiftLunchBreakPrev=Shift Lunch Break Previous
 
 #Module 5 Bug issue constants
 postTypeWarning=Please Select Post Type
