--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -327,6 +327,7 @@ osceWarningPast = Date may not be in the past.
 osceWarningFuture = Date too far in the future. Has to be within 2 years of now.
 
 #Circuit details view
+close = Close
 osceSimpatsInShortBreak = Simpats in short break*
 generate = Generate*
 clearAll = Clear All*
@@ -344,6 +345,10 @@ circuitLunchBreakStart=Lunch break start*
 circuitStation = Station*
 select = Select*
 circuitUnnamedSequence = Unnamed Sequence*
+
+shiftLunchBreakNext=Later lunch
+ShiftLunchBreakPrev=Earlier lunch
+
 warningPostType = Please select type of station!*
 warningStatusNotChanged = OSCE status not changed to "new"!*
 warningTimeFormat = Please enter time in format hh:mm!*
@@ -380,6 +385,9 @@ warningGenerate=Please enter  values for discipline and field!
 
 #Sequence Sub View
 splitSequence = Split sequence
+
+#StudentsSubDetailsView
+importStudents = Import Students
 
 #SPEc Assignment C
 keywords = Keywords*
@@ -422,7 +430,6 @@ accepted = Accepted
 assignTo = Assign To
 enterPatient = Please enter Patient name ...
 patientInformation = Patient in Semester's Information
-close = close
 patientAlreadyAssigned = Patient is already assigned.
 pleaseSelectRole = Please Select Role
 patientIsNotAccepted = Patient is not accepted.
@@ -432,10 +439,6 @@ updateOsce=OSCE Data Updated sucessfully*
 deleteTask=Do you really want to delete this task?*
 saveOsceBlueprint=Osce Post Blueprint Saved Successfully.*
 osceDaySuccess=Osce Day Updated successfully*
-
-#MODULE 6 START
-importstudent = Students import
-#MODULE 6 END
 
 # Issue : 120
 fileDetail = Files
@@ -593,9 +596,6 @@ checklistTopicNotNull=CheckList Topic Cannot be null
 
 headerValueMessage=Please Enter Valid Value For OSCE
 startEndTimeMessage=please enter start time less ten end time
-
-shiftLunchBreakNext=Shift Lunch Break Next
-ShiftLunchBreakPrev=Shift Lunch Break Previous
 
 #Module 5 Bug issue constants
 postTypeWarning=Please Select Post Type
