Added translations to client.ui.examinationPlan.* Added IconButtons

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -342,7 +342,7 @@ circuitCalculations = Berechnete Zeiten*
 circuitLunchBreak= Mittagspause*
 circuitEndTime = Endzeit*
 circuitLunchBreakStart = Beginn Mittagspause*
-circuitStation = Post
+circuitStation = Posten
 select = Ausw\u00E4hlen*
 circuitUnnamedSequence = Unbenannte Sequenz*
 
@@ -382,12 +382,54 @@ warningNoPreviousDay = Kein vorangehender Tag!*
 warningHeaderValue=Bitte g\u00FCltigen Wert f\u00FCr OSCE eingeben
 warningStartEndTime=Startzeit muss vor Endzeit liegen.
 warningGenerate=Bitte Werte f\u00FCr Disziplin und Feld eingeben!
+dataWarning = Datum zu sp\u00E4t*
+dataPastDateWarning = Data must not be past date*
+splittingNotAllowWarning=Spliting is not allowed (Day End Time must greater than 13)
+roomAssignedWarning = Raum bereits einem anderen Posten zugewiesen
+pleaseEnterWarning = Bitte einen Wert eingeben f\u00FCr
 
 #Sequence Sub View
 splitSequence = Reihenfolge Trennen
 
 #StudentsSubDetailsView
 importStudents = Studenten importieren
+
+#ExaminationScheduleView
+exaPlanShortBreak = Kurze Pause:
+exaPlanMiddleBreak = Mittlere Pause:
+exaPlanNumRooms = Anzahl R\u00E4ume:
+exaPlanLunchBreak = Mittagspause:
+exaPlanLongBreak= Lange Pause:
+exaPlanChangeBreak = SimPat-Wechsel-Pause:
+exaPlanAssignStudents = Studenten zuweisen
+exaPlanAssignSp = SimPats zuweisen
+
+#ExaminationScheduleActivity
+exaPlanBreakPost = SP Pause
+examiner = Examinator
+exaPlanSpSuccess = Simulationspatienten erfolgreich zugewiesen.
+exaPlanSpFailure = Simulationspatienten konnten nicht zugewiesen werden.
+exaPlanStudentSuccess = Studenten erfolgreich zugewiesen.
+exaPlanStudentFailure = Studenten konnten nicht zugewiesen werden.
+exaPlanStudShort = S
+exaPlanExaShort = E
+exaPlanSpShort = SP
+failure = Ein Fehler ist aufgetreten
+
+warningExaminerTime = Name des Examinators und Schlusszeit d\u00FCrfen nicht leer sein!
+warningExaminer = Das Feld Examinator darf nicht leer sein!
+
+#Examination/PopupView
+examinerName = Name Examinator:
+postType = Postenart:
+spName = SP Name:
+
+#Examination/SPView
+patientNotAssigned = Patient nicht zugewiesen.
+studentNotAssigned = Student nicht zugewiesen.
+
+autoAssignmentSuccess = Patients are assigned in Role Successfully.
+autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
 
 #SPEc Assignment C
 keywords = Keywords*
@@ -474,35 +516,6 @@ securityType = Security Type
 backupViewHeading=Pause
 #modul 3 changes }
 
-#Modulue 8[
-shortBreak=Short Break :
-middleBreak=Middle Break :
-numOfRooms=number of Rooms :
-studentAssignment= Student Assignment
-spAssignment=Standardized Patient Assignment
-examinerName=Examiner Name :
-postType=Post Type:
-spName=SP Name :
-patientNotAssigned=Patient is Not Assigned.
-studentNotAssigned=Student is Not Assigned.
-examinerNotNull=Examiner Cannot be Null.
-#Modulue 8]
-
-# Module 5 changes {
-closedButtonString=Close
-# Module 5 changes }
-
-examiner=Examiner
-simpatChangeBreak=Simpat Change Break :
-longBreak=Long Break :
-autoSPSuccess=Standardized Patient Assigned Successfully.
-autoAssignmentSuccess=Patients are assigned in Role Successfully.
-autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
-autoStudentSuccess=Students are Assigned Successfully.
-autoStudentFailure=Students are not Assigned Successfully.
-autoSPFailure=Standardized Patients are not Assigned Successfully.
-failure= Failure Occured
-
 # Module 5 bug Report Change
 osceSequence=Osce Sequence :
 # E Module 5 bug Report Change
@@ -579,7 +592,6 @@ criterialbl=Criteria
 criteriadelete="Are you sure you want to delete this criteria?"
 optiondelete="Are you sure you want to delete this option?"
 
-breakPost=SP break
 # SPEC Change
 fileUploadSuccess=File uploaded successfully*
 requiredFields=Please fill all the required fields
@@ -599,36 +611,3 @@ checklistTopicNotNull=CheckList Topic Cannot be null
 
 headerValueMessage=Please Enter Valid Value For OSCE
 startEndTimeMessage=please enter start time less ten end time
-
-#Module 5 Bug issue constants
-postTypeWarning=Please Select Post Type
-specializationWarning=Select Specialization
-osceStatusWarning=Osce Status Not Changed to New
-timeFormatWarning=Please Enter valid formatted Time Valid format is HH:MM
-hourFormatWarning=Please Enter Valid Hour (Allowed Till 24)
-minuteFormatWarning=Please Enter Valid Minutes (Allowed Till 59)
-dataWarning=Data past date
-startTimeWarning=Start Time must not Empty
-endDateWarning=EndDate Must Not Empty
-dataEmptyWarning=Data must not empty
-dataPastDateWarning=Data must not be past date
-splittingWarning=No further Splitting is allowed
-splittingNotAllowWarning=Spliting is not allowed (Day End Time must greater than 13)
-osceDayWarning=No Osce Day for this Osce defined
-scheduleWarning=Schedule Not Generated and Osce Status Not Changed to Generated
-osceScaffoldWarning=Osce Scaffold Not Generated and Osce Status Not Changed to Generated
-osceStatusGeneratedWarning=Osce Status Not Changed to Generated
-osceStatusFixedWarning=Osce Status Not Changed to Fixed
-osceStatusClosedWarning=Osce Status Not Changed to Closed
-assignmentWarning=Assignment Not Generated for Osce and Osce Status Not Changed to Close
-sequenceWarning=Please Select atleast one Sequence
-rotationWarning=Rotation not assign to Next Day Sequence
-rotationSuccess=Rotation Successfully Assign to Next Sequence
-newDayRotationSuccess=New Day Created and Rotation assign to Sequence Successfully
-schedulePostponeWarning=Schedule is not Postpone
-prviousDayWarning=No Previous Day
-rotationPrevioustWarning=Rotation is not Assign to Previous Sequence
-rotationPreviousSuccess=Rotation is Assign to Previous Sequence Successfully
-schedulePrepondWarning=Schedule is not Prepond
-roomAssignedWarning=Room already assigned to another post
-pleaseEnterWarning=Please enter
