Added Translations / Icons to SummoningsView

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -428,6 +428,31 @@ spName = SP Name:
 patientNotAssigned = Patient nicht zugewiesen.
 studentNotAssigned = Student nicht zugewiesen.
 
+#SummoningsView
+summoningsMailSp = Mail an SPs versenden
+summoningsPrintSp = Kopien f\u00FCr SPs drucken
+summoningsMailExa = Mail an Examinatoren senden
+summoningsPrintExa = Kopien f\u00FCr Examinatoren drucken
+summoningsAll = Alle
+summoningsSelected = Ausgew\u00E4hlte
+
+#SummoningsPopupView
+summoningsSend = Mail senden
+summoningsLoadTpl = Vorlage laden
+summoningsSaveTpl = Vorlage speichern
+summoningsRestoreTpl = Vorlage wiederherstellen
+summoningsTpl = Mailvorlage
+summoningsPlease = Die untenstehenden Variablen bitte auf keinen Fall l\u00F6schen oder \u00E4ndern!
+summoningsVarTo = [toName]
+summoningsVarFrom = [fromName]
+summoningsVarAssignment = [assignment]
+summoningsToName = Vorname und Name des Empf\u00E4ngers
+summoningsFromName = Name des Senders.
+summoningsAssignment = Zuweisungen f\u00FCr SimPat oder Examinator.
+summoningsOnlyIfExaminer = * Raumnummer wird nur f\u00FCr Examinatoren angezeigt.
+summoningsAssignmentFormatHead = Anzeigeformat f\u00FCr Zuweisungen:
+summoningsAssignmentFormat = [Date] [Start Time] [End Time] [Role] [Room Number]
+
 autoAssignmentSuccess = Patients are assigned in Role Successfully.
 autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
 
