--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -428,6 +428,31 @@ spName = SP Name:
 patientNotAssigned = Patient is not assigned.
 studentNotAssigned = Student is not assigned.
 
+#SummoningsView
+summoningsMailSp = Send mail to SPs
+summoningsPrintSp = Print copies for SPs
+summoningsMailExa = Send mail to examiners
+summoningsPrintExa = Print copies for examiners
+summoningsAll = All
+summoningsSelected = Selected
+
+#SummoningsPopupView
+summoningsSend = Send mail
+summoningsLoadTpl = Load template
+summoningsSaveTpl = Store template
+summoningsRestoreTpl = Restore template
+summoningsTpl = Mail template
+summoningsPlease = Please do not change or remove the following variables!
+summoningsVarTo = [toName]
+summoningsVarFrom = [fromName]
+summoningsVarAssignment = [assignment]
+summoningsToName = Full name of receiepent
+summoningsFromName = Senders name
+summoningsAssignment = Assignments for SimPat or Examiner.
+summoningsOnlyIfExaminer = * Room number will only appear if recepient is an examiner.
+summoningsAssignmentFormatHead = Display format for assignments:
+summoningsAssignmentFormat = [Date] [Start Time] [End Time] [Role] [Room Number]
+
 autoAssignmentSuccess=Patients are assigned in Role Successfully.
 autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
 
