Added translations to summonings activity

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -13,7 +13,6 @@ addTrait = Merkmal hinzuf\u00FCgen
 addUser = Benutzer hinzuf\u00FCgen
 administrator = Benutzer
 age = Alter
-all = Alle
 answer = Antwort
 answered = Beantwortet?
 answerGiven = Wurde beantwortet
@@ -140,6 +139,8 @@ changesDiscarded = Sind Sie sicher? \u00C4nderungen werden nicht gespeichert!
 okBtn = Ok
 warning = Warnung
 alert = Alarm
+all = Alle
+selected = Ausgew\u00E4hlte
 
 heightUnit = cm
 weightUnit = kg
@@ -433,8 +434,6 @@ summoningsMailSp = Mail an SPs versenden
 summoningsPrintSp = Kopien f\u00FCr SPs drucken
 summoningsMailExa = Mail an Examinatoren senden
 summoningsPrintExa = Kopien f\u00FCr Examinatoren drucken
-summoningsAll = Alle
-summoningsSelected = Ausgew\u00E4hlte
 
 #SummoningsPopupView
 summoningsSend = Mail senden
@@ -452,6 +451,20 @@ summoningsAssignment = Zuweisungen f\u00FCr SimPat oder Examinator.
 summoningsOnlyIfExaminer = * Raumnummer wird nur f\u00FCr Examinatoren angezeigt.
 summoningsAssignmentFormatHead = Anzeigeformat f\u00FCr Zuweisungen:
 summoningsAssignmentFormat = [Date] [Start Time] [End Time] [Role] [Room Number]
+
+#SummoningsActivity
+warningSelectSp = Bitte mindestens einen Simulationspatienten ausw\u00E4hlen!
+warningTemplateNotFound = Vorlage nicht gefunden!
+confirmationMailSent = Mail erfolgreich gesendet!
+errorMailSend = Nachricht konnte nicht gesendet werden!
+confirmationTplSaved = Vorlage gespeichert!
+errorInvalidTplPath = Ung\u00FCltiger Pfad zum Speichern der Vorlage. Bitte Administrator kontaktieren.
+errorTplSave = Fehler beim speichern der Vorlage
+confirmationTplRestore = Vorlage erfolgreich wiederhergestellt.
+errorTplRestore = Fehler beim Wiederherstellen der Vorlage
+warningSelectExaminer = Bitte mindestens einen Examinator ausw\u00E4hlen!
+errorTplNotFound = Vorlage nicht gefunden!
+summoningsGeneratePdf = PDF generieren
 
 autoAssignmentSuccess = Patients are assigned in Role Successfully.
 autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
