--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -13,7 +13,6 @@ addTrait = Add trait
 addUser = Add user
 administrator = User
 age = Age
-all = All
 answer = Answer
 answered = Answered?
 answerGiven = Answer given
@@ -140,6 +139,8 @@ changesDiscarded = Are you sure? Changes will be discarded!
 okBtn = Ok
 warning = Warning
 alert = Alert
+all = All
+selected = Selected
 
 heightUnit = cm
 weightUnit = kg
@@ -433,8 +434,6 @@ summoningsMailSp = Send mail to SPs
 summoningsPrintSp = Print copies for SPs
 summoningsMailExa = Send mail to examiners
 summoningsPrintExa = Print copies for examiners
-summoningsAll = All
-summoningsSelected = Selected
 
 #SummoningsPopupView
 summoningsSend = Send mail
@@ -452,6 +451,20 @@ summoningsAssignment = Assignments for SimPat or Examiner.
 summoningsOnlyIfExaminer = * Room number will only appear if recepient is an examiner.
 summoningsAssignmentFormatHead = Display format for assignments:
 summoningsAssignmentFormat = [Date] [Start Time] [End Time] [Role] [Room Number]
+
+#SummoningsActivity
+warningSelectSp = Please select at least one standardized patient!
+warningTemplateNotFound = Template not found!
+confirmationMailSent = Mail sent successfully!
+errorMailSend = Failed to send mail!
+confirmationTplSaved = Template saved!
+errorInvalidTplPath = Invalid Path for Saving Template. Please contact Administrator.
+errorTplSave = Error saving template.
+confirmationTplRestore = Template successfully restored.
+errorTplRestore = An error occurred while restoring the template.
+warningSelectExaminer = Please select at least one examiner.
+errorTplNotFound = Template not found!
+summoningsGeneratePdf = Generate PDF
 
 autoAssignmentSuccess=Patients are assigned in Role Successfully.
 autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
