Added Translations to IndividualScheduleDetailsView/-Activity

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -466,6 +466,12 @@ warningSelectExaminer = Bitte mindestens einen Examinator ausw\u00E4hlen!
 errorTplNotFound = Vorlage nicht gefunden!
 summoningsGeneratePdf = PDF generieren
 
+#IndividualSchedulesDetailsView
+schedulesPrintStud = Kopien f\u00FCr Studenten drucken
+
+#IndividualSchedulesDetailsActivity
+warningSelectStudent = Bitte mindestens einen Studenten ausw\u00E4hlen!
+
 autoAssignmentSuccess = Patients are assigned in Role Successfully.
 autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
 
