--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -466,6 +466,12 @@ warningSelectExaminer = Please select at least one examiner.
 errorTplNotFound = Template not found!
 summoningsGeneratePdf = Generate PDF
 
+#IndividualSchedulesDetailsView
+schedulesPrintStud = Print copies for students
+
+#IndividualSchedulesDetailsActivity
+warningSelectStudent = Please select at least one student!
+
 autoAssignmentSuccess=Patients are assigned in Role Successfully.
 autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
 
