--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -655,3 +655,4 @@ checklistTopicNotNull=CheckList Topic Cannot be null
 
 headerValueMessage=Please Enter Valid Value For OSCE
 startEndTimeMessage=please enter start time less ten end time
+roomNotNullWarning=Please assign room to each Post
