--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -329,7 +329,7 @@ osceWarningFuture = Datum zu weit in der Zukunft. Sollte nicht weiter als 2 Jahr
 
 #Circuit details view
 close = Schliessen
-osceSimpatsInShortBreak = SimPats in Kurzpause*
+osceSimpatsInShortBreak = Kurze Pause mit SP-Wechsel*
 generate = Generieren*
 clearAll = Alle l\u00F6schen*
 fixedButtonString = Fixieren*
