--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -329,7 +329,7 @@ osceWarningFuture = Date too far in the future. Has to be within 2 years of now.
 
 #Circuit details view
 close = Close
-osceSimpatsInShortBreak = Simpats in short break*
+osceSimpatsInShortBreak = Short break with SP-changeover
 generate = Generate*
 clearAll = Clear All*
 fixedButtonString = Freeze*
