Added some translations, icons, replaced some string constants.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -95,7 +95,6 @@ previousTitle = Vorheriger Titel
 print = Drucken
 profession = Beruf
 question = Frage
-reallyDelete = Wirklich l\u00F6schen?
 resetFilters = Filter zur\u00FCcksetzen
 responsibilities = Zust\u00E4ndigkeiten
 roleAssignments = Rollenzuweisungen
@@ -141,6 +140,7 @@ warning = Warnung
 alert = Alarm
 all = Alle
 selected = Ausgew\u00E4hlte
+reallyDelete = Wirklich l\u00F6schen?z
 
 heightUnit = cm
 weightUnit = kg
@@ -197,6 +197,9 @@ importObjective = Lernziel importieren
 addQuestion = Frage hinzuf\u00FCgen
 editQuestion = Frage bearbeiten
 
+
+spImageUpload= Bild erfolgreich hochgeladen!
+
 ######################### - ROLE - #########################
 
 ####ROLES
@@ -215,7 +218,7 @@ roleActive = Active*
 roleDetail = Rollendetails*
 roleName = Rollenbezeichnung*
 roleAcronym = Abk\u00FCrzung*
-roleType = Rollentyp*
+roleType = Rollentyp*f
 #RoleDetailsView/RoleParticipants
 roleParticipants = Rollenbeteiligte*
 author = Autor*
@@ -223,7 +226,8 @@ reviewer = Revisor*
 addAuthor = Autor hinzuf\u00FCgen*
 addReviewer = Revisor hinzuf\u00FCgen*
 #RoleDetailsView/Keyword
-keyword=Schl\u00FCsselwort*
+keyword = Schl\u00FCsselwort
+keywords=Schl\u00FCsselw\u00F6rter*
 addKeyword = Schl\u00FCsselwort hinzuf\u00FCgen*
 #RoleDetailsView/Learning
 learning = Learning*
@@ -472,19 +476,37 @@ schedulesPrintStud = Kopien f\u00FCr Studenten drucken
 #IndividualSchedulesDetailsActivity
 warningSelectStudent = Bitte mindestens einen Studenten ausw\u00E4hlen!
 
-autoAssignmentSuccess = Patients are assigned in Role Successfully.
-autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
+#RoleAssignments/manualStandardizedPatientInSemesterAssignmentPopup
+warningNoActiveSimPat = Kein aktivierter SimPat vorhanden!
+roleAddManually = SimPats manuell hinzuf\u00FCgen
+roleAddAllActive = Alle aktiven SP hinzuf\u00FCgen
 
-#SPEc Assignment C
-keywords = Keywords*
-learningObjectives = Learning Objectives*
-#Assignment H
-imageUpload= Bild erfolgreich hochgeladen*
+#RoleAssignments/OsceDaySubView
+roleOSCESecurityChange = Sind Sie sicher, dass Sie den Sicherheitsstatus \u00E4ndern wollen?
 
-#Assignment J
-table_item=table_item*
-rich_text_item=rich_text_item*
-#By SPEC End
+#RoleAssignments/PatientInSemesterData
+warningPatientHasRole = Kann nicht gel\u00F6scht werden, da ihm eine Rolle zugewiesen ist.
+confirmationDeleteAssignment = Wollen Sie diese Zuweisung wirklich l\u00F6schen?
+
+#RoleAssignments/RoleAssignmentPopupView
+roleAcceptedTrainings = Angenommene Trainings.
+roleAcceptedOsces = Angenommene OSCEs
+roleAssignedRoles = Zugewiesene Rollen
+rolePatientInformation = Information \u00FCber SimPat
+
+#RoleAssignments/RoleAssignmentView
+roleSurveyImport = Umfragedaten importieren
+roleAutoAssign = Rollen automatisch zuweisen
+roleAccepted = Akzeptiert
+roleAssignTo = Zuweisen an
+warningPleaseSelectRole = Bitte Rolle ausw\u00E4hlen!
+
+#RoleAssignments/RoleAssignmentPatientInSemesterActivity
+warningPatientIsNotAccepted = SimPat hat nicht akzeptiert!
+warningPatientAlreadyAssigned = SimPat ist bereits zugewiesen!
+confirmationAutoAssignmentSuccess = SimPats erfolgreich den Rollen zugewiesen!
+errorAutoAssignmentFailure = SimPats konnten nicht den Rollen zugewiesen werden!
+dmzShowReply = Zeige Nachrichten vom DMZ-Server an
 
 #Assignment E[
 importQuestion = Import Question*
@@ -506,19 +528,7 @@ deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.*
 
 #MODULE 3 START
 loading = loading...
-acceptedTraining = Trainings accepted
-acceptedOSCE = OSCE's accepted
-assignedRole = Roles assigned
-surveyImport = Unfrage Import
-autoAssign = Automatical Assign
-addManually = Add manually
-accepted = Accepted
-assignTo = Assign To
 enterPatient = Please enter Patient name ...
-patientInformation = Patient in Semester's Information
-patientAlreadyAssigned = Patient is already assigned.
-pleaseSelectRole = Please Select Role
-patientIsNotAccepted = Patient is not accepted.
 # End MODULE 3
 
 updateOsce=OSCE Daten erfolgreich aktualisiert*
@@ -543,18 +553,9 @@ endtimedoc=End Time
 #moduel 7
 
 # Module 3 : Task : B
-addAllActive = Add All Active
-onDeleteRoleAssignedToPatient = Can't delete.Patient has assigned Role.
-deletePatientInSemester=Do you want delete Patient Assignment?
 active = Active
 inActive = Inactive
-patientIsNotAvailable = No patient is available with active status.
 # Module 3 : Task : B
-
-# Module 3 : Task : I
-OSCESecurityChange = Do you want change Security status ?
-avgOfSPPerPost = Average of SP per post
-securityType = Security Type
 
 #modul 3 changes {
 backupViewHeading=Pause
