--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -95,7 +95,6 @@ previousTitle = previous title
 print = Print
 profession = Profession
 question = Question
-reallyDelete = Really delete?
 resetFilters = Reset filters
 responsibilities = Responsibilities
 roleAssignments = Role assignments
@@ -141,6 +140,7 @@ warning = Warning
 alert = Alert
 all = All
 selected = Selected
+reallyDelete = Really delete?
 
 heightUnit = cm
 weightUnit = kg
@@ -197,6 +197,8 @@ importObjective = Import Objective
 addQuestion = Add question
 editQuestion = Edit question
 
+spImageUpload= Image uploaded successfully!
+
 ######################### - ROLE - #########################
 
 ####ROLES
@@ -223,7 +225,8 @@ reviewer = Reviewer
 addAuthor = Add author
 addReviewer = Add reviewer
 #RoleDetailsView/Keyword
-keyword=Keyword*
+keyword = Keyword
+keywords=Keywords*
 addKeyword = Add keyword
 #RoleDetailsView/Learning
 learning = Learning*
@@ -472,19 +475,37 @@ schedulesPrintStud = Print copies for students
 #IndividualSchedulesDetailsActivity
 warningSelectStudent = Please select at least one student!
 
-autoAssignmentSuccess=Patients are assigned in Role Successfully.
-autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
+#RoleAssignments/manualStandardizedPatientInSemesterAssignmentPopup
+warningNoActiveSimPat = No simpat is activated!
+roleAddManually = Manually add SimPats
+roleAddAllActive = Add all active SPs
 
-#SPEc Assignment C
-keywords = Keywords*
-learningObjectives = Learning Objectives*
-#Assignment H
-imageUpload= Image uploaded successfully*
+#RoleAssignments/OsceDaySubView
+roleOSCESecurityChange = Are you sure you want change the security status?
 
-#Assignment H
-table_item=table_item*
-rich_text_item=rich_text_item*
-#By SPEC End
+#RoleAssignments/PatientInSemesterData
+warningPatientHasRole = Can't delete. Patient has assigned role.
+confirmationDeleteAssignment = Do you really want to delete this assignment?
+
+#RoleAssignments/RoleAssignmentPopupView
+roleAcceptedTrainings = Accepted trainings.
+roleAcceptedOsces = Accepted OSCEs
+roleAssignedRoles = Assigned roles
+rolePatientInformation = Information on SimPat
+
+#RoleAssignments/RoleAssignmentView
+roleSurveyImport = Import survey data
+roleAutoAssign = Automatically assign roles
+roleAccepted = Accepted
+roleAssignTo = Assign To
+warningPleaseSelectRole = Please Select Role!
+
+#RoleAssignments/RoleAssignmentPatientInSemesterActivity
+warningPatientIsNotAccepted = SimPat has not accepted!
+warningPatientAlreadyAssigned = SimPat is already assigned!
+confirmationAutoAssignmentSuccess = SimPats successfully assigned to roles!
+errorAutoAssignmentFailure = SimPats could not be assigned to roles!
+dmzShowReply = Show messages received from DMZ-Server
 
 #Assignment E[
 importQuestion = Import Question*
@@ -506,19 +527,7 @@ deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.*
 
 #MODULE 3 START
 loading = loading...
-acceptedTraining = Trainings accepted
-acceptedOSCE = OSCE's accepted
-assignedRole = Roles assigned
-surveyImport = Unfrage Import
-autoAssign = Automatical Assign
-addManually = Add manually
-accepted = Accepted
-assignTo = Assign To
 enterPatient = Please enter Patient name ...
-patientInformation = Patient in Semester's Information
-patientAlreadyAssigned = Patient is already assigned.
-pleaseSelectRole = Please Select Role
-patientIsNotAccepted = Patient is not accepted.
 # End MODULE 3
 
 updateOsce=OSCE Data Updated sucessfully*
@@ -543,18 +552,9 @@ endtimedoc=End Time
 #moduel 7
 
 # Module 3 : Task : B
-addAllActive = Add All Active
-onDeleteRoleAssignedToPatient = Can't delete.Patient has assigned Role.
-deletePatientInSemester=Do you want delete Patient Assignment?
 active = Active
 inActive = Inactive
-patientIsNotAvailable = No patient is available with active status.
 # Module 3 : Task : B
-
-# Module 3 : Task : I
-OSCESecurityChange = Do you want change Security status ?
-avgOfSPPerPost = Average of SP per post
-securityType = Security Type
 
 #modul 3 changes {
 backupViewHeading=Pause
